<resources>
    <string name="loading">Loading&#8230;</string>
    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="app_name">DiabetesDiary</string>
    <string name="new_entry">New entry</string>
    <string name="diary">Diary</string>
    <string name="export">Export</string>
    <string name="blood_value">Blood value</string>
    <string name="be">BE</string>
    <string name="insulin">Insulin</string>
    <string name="oclock">o\'clock</string>
    <string name="error_blood_value">Please enter your measured blood value.</string>
    <string name="error_be">Please enter the BE of your meal.</string>
    <string name="error_insulin">Please enter the units of insulin, you will put.</string>
    <string name="insert_entry_success">The entry was added to the diary successfully.</string>
    <string name="widget_name">Average blood value</string>
    <string name="avg">avg</string>
    <string name="general">General</string>
    <string name="be_factor">BE-Factor:</string>
    <string name="be_factor_summary">You should provide your personal BE-Factor here.</string>
    <string name="insulin_recommendation">Recommendation of Insulin: </string>
    <string name="error_pdf">An error occured while creating the PDF file.</string>
    <string name="need_access_external_storage">For creating the PDF file, the app needs access to the external memory.</string>
    <string name="export_success_need_pdf_viewer">The export was successful (/sdcard/documents/diabetes_diary.pdf).\n\nPlease install a PDF-Viewer (e.g. Adobe Reader), to show the PDF.</string>
    <string name="export_success">The export was successful (/sdcard/documents/diabetes_diary.pdf).</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="content_desc_fab_home">Preferences</string>
    <string name="content_desc_fab_new_entry">Okay</string>
    <string name="diabetes_info">Diabetes - Info</string>
    <string name="wikipedia_url">https://en.wikipedia.org/w/api.php?format=json&amp;action=parse&amp;page=Diabetes%20mellitus&amp;prop=text&amp;section=0</string>
</resources>
