<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">
        <Button
            android:id="@+id/btn_newEntry"
            style="@style/HomeButton"
            android:text="@string/new_entry"/>
        <Button
            android:id="@+id/btn_diary"
            style="@style/HomeButton"
            android:text="@string/diary"/>
        <Button
            android:id="@+id/btn_export"
            style="@style/HomeButton"
            android:text="@string/export"/>
    </LinearLayout>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_prefs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/cog"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>
</RelativeLayout>