<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/tv_currentDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/black"
        android:textSize="@dimen/default_text_size_plus_3"
        android:layout_centerHorizontal="true"/>
    <EditText
        android:id="@+id/et_bloodValue"
        style="@style/NewEntryEditText"
        android:layout_marginTop="40dp"
        android:hint="@string/blood_value"
        android:inputType="numberSigned|numberDecimal"
        android:layout_below="@id/tv_currentDate"/>
    <EditText
        android:id="@+id/et_be"
        style="@style/NewEntryEditText"
        android:layout_width="@dimen/et_be_width"
        android:layout_marginTop="20dp"
        android:hint="@string/be"
        android:inputType="numberSigned|number"
        android:layout_below="@id/et_bloodValue"/>
    <EditText
        android:id="@+id/et_insulin"
        style="@style/NewEntryEditText"
        android:layout_marginTop="20dp"
        android:hint="@string/insulin"
        android:inputType="numberSigned|number"
        android:layout_below="@id/et_bloodValue"
        android:layout_toRightOf="@id/et_be"
        android:layout_toEndOf="@id/et_be"/>
    <TextView
        android:id="@+id/tv_recommendation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@android:color/black"
        android:textSize="@dimen/default_text_size_plus_3"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/et_insulin"/>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/fab_margin"
        android:src="@mipmap/ic_ok"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>
</RelativeLayout>